Fix issue with copyright not wrapping in IE

--- a/static/copywrite.scss
+++ b/static/copywrite.scss
@@ -85,6 +85,7 @@
 				//min-height: 250px;
 				//min-width: 280px;
 				//max-width: 500px;
+				width: 100%;
 				margin-top: 15px;
 				padding: 0 20px;
 
